# living-meta

./: CONTRIBUTING.md  Dockerfile  E156-PROTOCOL.md  F1000_4Persona_LookOnly_Review.md  F1000_Cover_Letter.docx  F1000_Cover_Letter.md  F1000_MultiPersona_Peer_Review.md  F1000_Software_Tool_Article.docx  F1000_Software_Tool_Article.md  F1000_Submission_Checklist_RealReview.md  F1000_Truth_4Persona_Review.md  F1000_Word_Expert_Review.md  README.md  docker-compose.yml  index.html  package-lock.json  package-scripts.json  package.json  push.sh  review-findings.md  tailwind.config.js  test_living_meta_opera.py  test_results.json  tsconfig.json  vite.config.js  vite.single.config.js  vitest.config.js
docker/: nginx.conf
docs/: API.md  DEPLOYMENT.md  JSDOC_GUIDE.md  MATHEMATICAL_APPENDIX.md  R_COMPARISON_TABLES.md  ipd-benchmark.md  limitations.md  protocol.md  validation-report.md
e156-submission/: config.json  index.html  paper.json  paper.md  protocol.md
f1000_artifacts/: flowchart_blueprint.md  tutorial_walkthrough.md  validation_summary.md
figures/: figure01_overview_fullpage.tiff  figure02_model_fullpage.tiff  figure03_results_fullpage.tiff  figure04_bias_fullpage.tiff  figure05_report_fullpage.tiff  figure06_workflow_infographic.tiff  figure07_architecture_infographic.tiff  figure08_data_journey_infographic.tiff  figure09_analysis_lifecycle_infographic.tiff  figure10_quality_governance_infographic.tiff  figure11_output_package_infographic.tiff
scripts/: build-single-file.js  (+1 more)
src/: app.js  (+2 more)
wasm/: Cargo.toml
wasm/src/: hksj.rs  lib.rs  nma.rs  reml.rs  tsa.rs
(+181 files in other folders)
