[package]
name = "living-meta-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Living Meta-Analysis Team"]
description = "WASM module for high-performance meta-analysis calculations"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# Error handling for WASM
console_error_panic_hook = { version = "0.1", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Numerical computing
nalgebra = "0.32"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size
opt-level = "s"
lto = true
